# zero2prod

./: Cargo.toml  Readme.md  audit.yaml  docker-compose.yaml  dockerfile  general.yaml
.github/workflows/: audit.yaml  general.yaml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20240930201255_create_subscriptions_table.sql  20241010191649_add_status_to_subscriptions.sql  20241010192050_make_status_not_null_in_subscriptions.sql  20241010192312_create_subscription_tokens_table.sql  20241016175945_create_users_table.sql  20241204120001_create_idempotency_table.sql  20241205125728_relax_null_checks_on_idempotency.sql  20241205191608_create_newsletter_issue_table.sql  20241205192153_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  session_state.rs  startup.rs  telemetry.rs
src/authentication/: middleware.rs  password.rs
src/domain/: mod.rs  subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: health_check.rs  mod.rs  newsletters.rs  subscription.rs  subscription_confirm.rs
src/routes/admin/: dashboard.rs
src/routes/admin/newsletters/: get.rs  post.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: change_password.rs  dashboard.rs  health_check.rs  helper.rs  login.rs  main.rs  newsletter.rs  subscription.rs  subscription_confirm.rs
