[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4.9"
actix-web-flash-messages = { version = "*", features = ["cookies"] }
actix-web-lab = "*"
actix-session = { version = "*", features = ["redis-session"] }
anyhow = "1"
argon2 = { version = "*", features = ["std"] }
base64 = "0.22"
chrono = "0.4.15"
claim = "0.5"
config = "0.11"
env_logger = "0.9"
htmlescape = "*"
log = "0.4"
once_cell = "1"
rand = { version = "0.8", features = ["std_rng"] }
reqwest = { version = "*", default-features = false, features = [
    "json",
    "rustls-tls",
    "cookies",
] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "3"
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.19"
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3.1"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
unicode-segmentation = "1"
urlencoding = "*"
uuid = { version = "1", features = ["v4", "serde"] }
validator = "0.18"

[dev-dependencies]
fake = "2"
linkify = "0.8"
quickcheck = "1"
quickcheck_macros = "1"
rand = "0.8"
serde_json = "1"
wiremock = "0.5"
